# isaac_so_arm101

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LIFT_TO_PICKNPLACE_CONVERSION_REPORT.md  README.md  pyproject.toml
ignored/: PICKNPLACE_TRAINING_GUIDE.md  REVEL_PICKNPLACE_USAGE.md  TRANSFER_LEARNING_REPORT.md  V0_TO_V1_TRANSFER.md  analyze_training_run.py  convert_checkpoint_obs_dim.py  coordinate_analysis.py  coordinate_debug.py  debug_cube1_targeting.py  debug_model_structure.py  debug_phase_conditions.py  debug_robot_behavior.py  fix_model_dimensions.py  fix_optimizer_transfer.py  fix_pytorch_metadata.py  fix_transfer_v0_to_v1.py  isaac_so_arm101.code-workspace  manual_tensor_converter.py  model_compatibility_fixer.py  professional_transfer_solution.py  transfer_v0_to_v1.py  v0_to_v1_transfer.py
ignored/assets/YCB/Axis_Aligned/: 036_wood_block.usd
ignored/assets/tables/: Ellendale.usd
scripts/: TRANSFER_LIFT_TO_PICKNPLACE_GUIDE.md  list_envs.py  transfer_lift_to_picknplace.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
scripts/skrl/: play.py  train.py
source/SO_100/SO_100/robots/: so_arm100.py
src/isaac_so_arm101/robots/: __init__.py
src/isaac_so_arm101/robots/trs_so100/: so_arm100.py
src/isaac_so_arm101/robots/trs_so100_roscon/: so_arm100_roscon.py
src/isaac_so_arm101/scripts/: list_envs.py  random_agent.py  zero_agent.py
src/isaac_so_arm101/scripts/rsl_rl/: play.py  train.py
src/isaac_so_arm101/tasks/lift/: __init__.py  camera_lift_env_cfg.py  joint_pos_env_cfg.py  lift_env_cfg.py
src/isaac_so_arm101/tasks/reach/: __init__.py  (+2 more)
(+24 files in other folders)
