[project]
name = "isaac-so-arm101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Le Lay", email = "louislelay@pal-robotics.com" }
]
requires-python = "==3.11.*"
dependencies = [
    "isaaclab[all,isaacsim]==2.3.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and implementation_name == 'cpython' and python_version == '3.11'",
  "sys_platform == 'win32' and implementation_name == 'cpython' and python_version == '3.11'"
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
